Fixed AdminGuard and made header more readable.

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,12 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @keyframes fadeIn {
     0% { opacity: 0; }
-    50% { opacity: 0.1; }
-    100% { opacity: 0.2; }
+    100% { opacity: 0.75; }
 }
 
 .ng-sidebar__backdrop {
-    opacity: 0.2 !important;
     animation-name: fadeIn !important;
     animation-duration: .2s !important;
 }
